[tool.poetry]
name = "lja_robotpy"
version = "0.1.0"
description = ""
authors = ["Evan Nagle <evan@mantle.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
robotpy = "^2024.3.1.0"
phoenix6 = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
